# policies-mentioned-in-policies

./: .gitignore  README.md  docker-compose.yml  main.py  mentions.json  output.csv  policy_classifier.py  pyproject.toml
policy_ner_model/: meta.json
policy_ner_model/ner/: moves
policy_ner_model/tagger/: model
policy_ner_model/vocab/: strings.json
src/: models.py  neo4j.py  text.py
writeups/: 02-removing-false-positives.md
